feat(HireLog): ✨ Introduce the app-image
[INFO]
- See releases